# vortex-asv-simulator

./: Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  entrypoint.sh
asv_description/: CMakeLists.txt  package.xml
asv_description/urdf/: snippets.xacro
asv_description/urdf/accessories/: axis_ptz.urdf.xacro
asv_gazebo/: package.xml
asv_gazebo/launch/: asv_world.launch  heron_world.launch  spawn_base_heron.launch
heron_description/: CMakeLists.txt  package.xml
heron_description/launch/: description.launch
heron_description/urdf/: accessories.urdf.xacro  base.xacro  heron.urdf.xacro  snippets.xacro
heron_description/urdf/accessories/: axis_ptz.urdf.xacro  novatel_smart6.urdf.xacro
heron_gazebo/: CMakeLists.txt  package.xml
heron_gazebo/launch/: heron_world.launch
thruster_interface/: CMakeLists.txt  package.xml
thruster_interface/launch/: thrust_interface.launch
thruster_interface/scripts/: thruster_interface_node.py
vortex_msgs/: CMakeLists.txt
