<?xml version="1.0"?>
<package format="2">
  <name>thruster_interface</name>
  <version>0.0.0</version>
  <description>The thruster_interface package</description>
  <maintainer email="chstr@stud.ntnu.no">Christopher Strøm</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>uuv_gazebo_ros_plugins_msgs</build_depend>
  <build_depend>vortex_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>uuv_gazebo_ros_plugins_msgs</build_export_depend>
  <build_export_depend>vortex_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>vortex_msgs</exec_depend>
</package>
